--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,8 +14,7 @@ source:
 build:
   skip: True  # [py3k]
   number: 1001
-  script: build:
-  script: python -m pip install . --no-deps -vv
+  script: {{ PYTHON }} -m pip install . --no-deps -vv
  
 requirements:
   build:
