--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyslet" %}
 {% set version = "0.7.20170805" %}
-{% set sha256 = "d4cbb85e16d58a8f990e15e711266ec2fe30a4dc4626c4d839bb7b7824afdf6c" %}
+{% set sha256 = "4f6cce9f60f9dc2543deee311da8b3e678fde3260971f301f4da2d40a4a30a8f" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://github.com/swl10/{{ name }}/archive/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
